--- a/docs/SettingUp.adoc
+++ b/docs/SettingUp.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 3 - Setting Up
+= iFridge - Setting Up
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :note-caption: :information_source:
 :warning-caption: :warning:
 endif::[]
-:repoURL: https://github.com/se-edu/addressbook-level3/tree/master
+:repoURL: https://github.com/AY1920S1-CS2103-F10-2/main/tree/master
 
 == Prerequisites
 
@@ -37,7 +37,7 @@ Do not disable them. If you have disabled them, go to `File` > `Settings` > `Plu
 
 == Verifying the setup
 
-. Run the `seedu.address.Main` and try a few commands
+. Run the `seedu.ifridge.Main` and try a few commands
 . <<Testing#,Run the tests>> to ensure they all pass.
 
 == Configurations to do before writing code
